<resources>
    <string name="app_name">MaterialYouFromEalipatov</string>
    <string name="picture_of_nasa">PictureOfNasa</string>
    <string name="any_message">AnyMessage</string>
    <string name="error_loading">Ошибка загрузки</string>
    <string name="error_loading_picture">Ошибка загрузки картинки</string>
    <string name="no_internet_connection">Нет подключения к интернет</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="settings">Настройки</string>
    <string name="back">Назад</string>
    <string name="search">Поиск</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="day_before_yesterday">Позавчера</string>
    <string name="one_fragment">One fragment</string>
    <string name="two_fragment">Two fragment</string>
    <string name="close_is_clicked">Close is Clicked</string>
    <string name="selected">Выбран</string>
    <string name="favorite">Избранное</string>
    <string name="expand_to_view">Разверните для просмотра</string>
    <string name="pull_up">Тяни вверх</string>
    <string name="hd">HD</string>

    <string name="default_chip">Default</string>
    <string name="entry">Entry</string>
    <string name="choice">Choice</string>
    <string name="action">Action</string>
    <string name="filter">Filter</string>
    <string name="background_color">Background Color</string>
    <string name="ripple_color">Ripple Color</string>
    <string name="chip_icon">Chip icon</string>
    <string name="chip">Chip</string>
    <string name="group">Group</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="choose_one">Choose One</string>
    <string name="choice_a">Choice A</string>
    <string name="choice_b">Choice B</string>
    <string name="choice_c">Choice C</string>
    <string name="in">in</string>
    <string name="single">single</string>
    <string name="line">line</string>
    <string name="add">add</string>
    <string name="horizontal">horizontal</string>
    <string name="a">a</string>
    <string name="scroll">scroll</string>
    <string name="close_icon_listener">Close Icon Listener</string>
    <string name="chips_example">Примеры чипов</string>

    <string name="card">Card</string>
    <string name="text">Text</string>
    <string name="switch_component">Switch</string>
    <string name="radio_button">Radio Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="text_button">Text Button</string>
    <string name="outlined_button">Outlined Button</string>
    <string name="unelevated_button">Unelevated Button</string>
    <string name="raised_button">Raised Button</string>
    <string name="filled_box_text_field">Filled Box Text Field</string>
    <string name="outlined_box_text_field">Outlined Box Text Field</string>

    <string name="moon_theme">Лунная тема</string>
    <string name="mars_theme">Марсианская тема</string>
    <string name="check_moon_theme">Выбрана: лунная тема</string>
    <string name="check_mars_theme">Выбрана: марсианская тема</string>
    <string name="night_mode">Ночной режим:</string>
    <string name="apply">Применить</string>
    <string name="auto_night_mode">Автоматический ночной режим</string>

    <string name="earth_tab_text">Earth</string>
    <string name="mars_tab_text">Mars</string>
    <string name="solar_system_tab_text">Solar system</string>

    <string name="layouts">Макеты</string>
    <string name="constraint_layout">Constraint</string>
    <string name="coordinator_layout">Coordinator</string>
    <string name="motion_layout">Motion</string>
    <string name="on_off">вкл/выкл</string>

    <string name="big_text">"This lovely starfield spans some four full moons (about 2 degrees) across the heroic northern constellation of Perseus. In telescopic exposures made during the nights of January 24, 26, and 28 it holds the famous pair of open or galactic star clusters h and Chi Persei with comet PanSTARRS (C/2017 T2) captured each night as it swept left to right across the field of view. Also cataloged as NGC 869 (right) and NGC 884, both star clusters are about 7,000 light-years away and contain stars much younger and hotter than the Sun. Separated by only a few hundred light-years, the clusters are both 13 million years young based on the ages of their individual stars, evidence that they were likely a product of the same star-forming region. Discovered in 2017 while still beyond the orbit of Saturn, Comet PanSTARRs is a new visitor to the inner solar system and just over 13 light-minutes from planet Earth. Always a rewarding sight in binoculars, the Double Cluster is even visible to the unaided eye from dark locations. C/2017 T2 could remain a telescopic comet though. One of the brightest comets anticipated in 2020 it makes its closest approach to the Sun in early May."</string>
    <string name="left">Левая</string>
    <string name="right">Правая</string>
    <string name="animate">Animate</string>
    <string name="transitions_example">Transitions example</string>
    <string name="tap_on_me">TAP ON ME</string>
    <string name="btn_text">Text</string>
    <string name="btn_explode">Explode</string>
    <string name="btn_image">Image</string>
    <string name="btn_move_trajectory">Move</string>
    <string name="mix">Mix</string>
    <string name="shuffle">Shuffle</string>
    <string name="animator">Animator</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="state_list_animator_example">StateListAnimator Example</string>
    <string name="scroll_animate">Scroll</string>
    <string name="select_animation">Нажмите для выбора анимации</string>
    <string name="title_animation_end">Кратер Даниэлсона</string>
    <string name="date_animation_end">5 июня 2018 г.</string>
    <string name="tap_for_info">Показать описание</string>
    <string name="description_animation_end">На фото видно камни и песок в кратере Даниэлсона (диаметр кратера около 67 км), расположенного на юго-востоке области Arabia Terra.</string>
    <string name="header_recycler">Заголовок</string>
    <string name="mars">Марс</string>
    <string name="mars_decript">Марс -- четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса -- древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).</string>
    <string name="earth">Земля</string>
    <string name="earth_descript">Дополнительный текст</string>
    <string name="recycler_layout">Recycler</string>
</resources>